# Breeder_cowork

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.ts
backend/: main.py
backend/analysis/: gp.py  gwas.py  mating.py  plots.py  qc.py
backend/api/: endpoints.py
backend/core/: config.py
backend/db/: database.py  init_db.py
backend/models/: models.py
backend/schemas/: schemas.py
backend/seed/: seed_from_csv.py
backend/services/: analysis_service.py
backend/tests/: test_analysis.py
breeder/: __init__.py  analysis.py  cli.py  data.py  plotting.py  qc.py  selection.py  utils.py
data/: sample_dataset.csv
frontend/src/: App.tsx  main.tsx
frontend/src/components/: Button.test.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/i18n/: en.json  i18n.ts  ko.json
frontend/src/pages/dashboard/: DashboardPage.tsx
frontend/src/pages/data-qc/: DataQcPage.tsx
frontend/src/pages/gp/: GpPage.tsx
frontend/src/pages/gwas/: GwasPage.tsx
frontend/src/pages/mating/: MatingPage.tsx
frontend/src/pages/reports/: ReportsPage.tsx
frontend/src/tests/: setup.ts
tests/: test_analysis.py  test_data.py  test_plotting.py  test_selection.py
tests/data/: covariates.csv  genotype.csv  phenotype.csv
